# angletronics_ros2

./: .gitignore  README.md
angletronics_ros2/: CMakeLists.txt  Package.xml  package.xml
angletronics_ros2_capture_image/: package.xml  setup.cfg  setup.py
angletronics_ros2_capture_image/angletronics_ros2_capture_image/: capturar.py  insertar_registro_reciclaje.py  openCv.py  test_insert.py
angletronics_ros2_custom_interface/: CMakeLists.txt  package.xml
angletronics_ros2_custom_interface/msg/: CircleParams.msg  RutaReciclajeParams.msg
angletronics_ros2_custom_interface/srv/: CircleMoveMsg.srv  RutaReciclajeMsg.srv
angletronics_ros2_mundo/: CMakeLists.txt  package.xml
angletronics_ros2_mundo/launch/: turtlebot3_my_world.launch.py
angletronics_ros2_mundo/map/: angle_world.pgm  angle_world.yaml  my_map.yaml  real_angle_world.pgm  real_angle_world.yaml
angletronics_ros2_mundo/world/: burger.model
angletronics_ros2_navegacion/: package.xml  setup.cfg  setup.py
angletronics_ros2_navegacion/config/: angle_world.pgm  angle_world.yaml  nav2_default_view.rviz  project_params.yaml  real_angle_world.pgm  real_angle_world.yaml
angletronics_ros2_navegacion/launch/: my_tb3_sim_nav2.launch.py
angletronics_ros2_ruta/: package.xml  setup.cfg  setup.py
angletronics_ros2_yolo/: new_names.names  package.xml  setup.cfg  setup.py
angletronics_ros_IPPublisher/: package.xml  setup.cfg  setup.py
angletronics_ros_ippublisher/: package.xml  setup.cfg  setup.py
angletronics_service/: package.xml  setup.cfg  setup.py
my_nav2_system/: package.xml
(+29 files in other folders)
