<?xml version="1.0"?>
<?xml-model href=http://download.ros.org/schema/package_format3.xsd
schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>angletronics_ros2</name>
 <version>2.1.4</version>
 <description>
 ROS 2 packages for angletronics project
 </description>
 <maintainer email="jcherram@epsg.upv.es">Juan Carlos</maintainer>
 <license>Apache 2.0</license>
 <url type="repository">https://github.com/3-GTI-ProyectoRobotica/angletronics_ros2.git</url>
 <buildtool_depend>ament_cmake</buildtool_depend>
 <exec_depend>angletronics_ros2_mundo</exec_depend>
 <exec_depend>angletronics_ros2_navegacion</exec_depend>
 <exec_depend>angletronics_ros_ippublisher</exec_depend>
 <export>
 <build_type>ament_cmake</build_type>
 </export>
</package>
